--- a/jett/src/main/resources/application.yml
+++ b/jett/src/main/resources/application.yml
@@ -1,10 +1,9 @@
 spring:
-
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/${MYSQL_DATABASE}?useSSL=false&allowPublicKeyRetrieval=true
-    username: ${MYSQL_ROOT_USER}
-    password: ${MYSQL_ROOT_PASSWORD}
+    url: jdbc:mysql://localhost:3306/jett?useSSL=false&allowPublicKeyRetrieval=true
+    username: root
+    password: zoLZak@!1321
 
   jpa:
     hibernate:
@@ -19,3 +18,21 @@ spring:
     redis:
       host: localhost
       port: 6379
+
+jwt:
+  secretKey: VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa
+  authType: Bearer
+  authoritiesKey: Authorities
+  accessTokenHeader: Authorization
+  refreshTokenHeader: X-REFRESH-TOKEN
+  accessTokenExpire: 86400000
+  refreshTokenExpire: 604800000
+
+springdoc:
+  default-consumes-media-type: application/json;charset=UTF-8
+  default-produces-media-type: application/json;charset=UTF-8
+  swagger-ui:
+    path: /
+    disable-swagger-default-url: true
+    display-request-duration: true
+    operations-sorter: alpha
