--- a/jett/src/main/resources/application.properties
+++ b/jett/src/main/resources/application.properties
@@ -1,16 +1,2 @@
-# spring.application.name=jett
-
-# spring.datasource.url=jdbc:mysql://localhost:3307/jett?allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
-# spring.datasource.username=root
-# spring.datasource.password=jett0710!@
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.format_sql=true
-# spring.sql.init.mode=always
-
-# spring.jpa.database=mysql
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-# spring.jpa.generate-ddl=true
+logging.level.org.springframework.web=DEBUG
+logging.level.com.choandyoo.jett=DEBUG
