--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+	//Webflux
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
