--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: '3.8'
 
 services:
-  frontend:
-    container_name: frontend
-    restart: always
-    env_file:
-      - ../../Frontend/jett/.env
-    build: 
-      context: ../../Frontend/jett/
-      dockerfile: Dockerfile
-    ports:
-      - "5173:3000"
-    networks:
-      - team_network
+#  frontend:
+#    container_name: frontend
+#    restart: always
+#    env_file:
+#      - ../../Frontend/jett/.env
+#    build:
+#      context: ../../Frontend/jett/
+#      dockerfile: Dockerfile
+#    ports:
+#      - "5173:3000"
+#    networks:
+#      - team_network
     
   database:
     container_name: mysql_db
