--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
 #    url: jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}?useSSL=false&allowPublicKeyRetrieval=true
     url: jdbc:mysql://localhost:3306/jett
     username: root
-    password:
+    password: 1234
 
   jpa:
     hibernate:
@@ -22,14 +22,14 @@ spring:
       host: localhost
       port: 6379
 
-jwt:
-  secretKey: VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa
-  authType: Bearer
-  authoritiesKey: Authorities
-  accessTokenHeader: Authorization
-  refreshTokenHeader: X-REFRESH-TOKEN
-  accessTokenExpire: 86400000
-  refreshTokenExpire: 604800000
+#jwt:
+#  secretKey: VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa
+#  authType: Bearer
+#  authoritiesKey: Authorities
+#  accessTokenHeader: Authorization
+#  refreshTokenHeader: X-REFRESH-TOKEN
+#  accessTokenExpire: 86400000
+#  refreshTokenExpire: 604800000
 
 springdoc:
   default-consumes-media-type: application/json;charset=UTF-8
