--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
-   	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+   	implementation 'com.google.code.gson:gson:2.8.7'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	//Webflux
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	compileOnly 'org.projectlombok:lombok'
